# cpu-rs

./: .gitignore  Cargo.toml  README.md
cpu-freq/: Cargo.toml  README.md
cpu-freq/examples/: values.rs
cpu-freq/src/: lib.rs
