[package]
name = "cpu-freq"
version = "0.0.1"
description = "Get CPU frequency information"
license = "MIT/Apache-2.0"
repository = "https://github.com/amanusk/cpu-freq.git"
keywords = ["cpu", "frequency", "cores"]
authors = ["amanusk <amanusk@protonmail.com>"]
edition = "2018"

[dependencies]
num_cpus = "1.10"
